# main_database

./: README.md  pyproject.toml
.github/workflows/: tests.yaml
functions/filepaths/: get_files_as_list.py
functions/tests/: test_filepaths.py
projects/Brainlab-DTI-Analysis/: cache.json  functions.py  intro.py  main.py  tract_creations.csv
