[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "main_database"
version = "0.1.0"
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["."]
include = ["functions*", "projects*"]

[tool.pytest.ini_options]
testpaths = ["functions/tests"]
python_files = ["test_*.py"]
